elastic-stack/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  generation: 1
  name: kibana-kibana
  namespace: monitoring
spec:
  rules:
    - host: kibana-dqs.mogiio.com
      http:
        paths:
          - backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kibana-dqs.mogiio.com
      secretName: mogiio-com-tls-secret
